fix: action buttons background for better contrast
Allows us to make an inverse style that is very clear if
it is pressed or not without relying on colour.

--- a/src/scss/themes/_base.scss
+++ b/src/scss/themes/_base.scss
@@ -44,12 +44,13 @@
   --nav-svg-fill-hover: #{$secondary-text-color};
   --nav-text-color-hover: #{$secondary-text-color};
 
-  --action-button-fill-color: #{lighten($main-theme-color, 18%)};
-  --action-button-fill-color-hover: #{lighten($main-theme-color, 22%)};
-  --action-button-fill-color-active: #{lighten($main-theme-color, 5%)};
-  --action-button-fill-color-pressed: #{darken($main-theme-color, 7%)};
-  --action-button-fill-color-pressed-hover: #{darken($main-theme-color, 2%)};
-  --action-button-fill-color-pressed-active: #{darken($main-theme-color, 15%)};
+  --action-button-fill-color: #{lighten($main-theme-color, 6%)};
+  --action-button-bg-color-hover: #{fade-out($main-theme-color, 0.8)};
+  --action-button-bg-color-active: #{fade-out($main-theme-color, 0.6)};
+  --action-button-bg-color-pressed: var(--action-button-fill-color);
+  --action-button-fill-color-pressed: #{$main-bg-color};
+  --action-button-bg-color-pressed-hover: #{fade-out($main-theme-color, 0.1)};
+  --action-button-bg-color-pressed-active: #{fade-out($main-theme-color, 0)};
 
   --action-button-deemphasized-fill-color: #{$deemphasized-color};
   --action-button-deemphasized-fill-color-hover: #{lighten($deemphasized-color, 22%)};
